--- a/web/themes/custom/filmfolk_theme/css/component/user.css
+++ b/web/themes/custom/filmfolk_theme/css/component/user.css
@@ -1,6 +1,8 @@
 .user-profile {
   .user-profile-image-wrapper {
     grid-area: image;
+    height: 100%;
+    width: 100%;
   }
   .user-profile-info-wrapper {
     grid-area: info;
